fixing modal overflow

--- a/src/components/Header/Notifications/Modal/Modal.scss
+++ b/src/components/Header/Notifications/Modal/Modal.scss
@@ -17,7 +17,7 @@
 
 .modal-content {
   max-width: 780px;
-  width: 100%;
+  width: 98%;
 }
 
 /* The Close Button */
